--- a/app/views/tourist_spots/_favorite_button.html.erb
+++ b/app/views/tourist_spots/_favorite_button.html.erb
@@ -1,31 +1,19 @@
-
 <% if current_user.favorite?(spot) %>
   <%= form_with(model:current_user.favorites.find_by(tourist_spot_id: spot.id), method: :delete, remote: true) do |f| %>
     <%= hidden_field_tag :favorite_spot_id, spot.id %>
-    <%= f.submit 'Remove Favorite', class: 'btn btn-danger w-100' %>
+    <%= button_tag type: "submit", class: "#{button_class}" do %>
+     <i class="fa-solid fa-heart <%= icon_class %>"></i>
+    <% end %>
   <% end %>
 <% else %>
   <%= form_with(model:current_user.favorites.build, remote: true) do |f| %>
     <%= hidden_field_tag :favorite_spot_id, spot.id %>
-    <%= f.submit 'Add Favorite', class: 'btn btn-primary w-100' %>
+    <%= button_tag type: "submit", class: "#{button_class}" do %>
+      <i class="fa-regular fa-heart <%= icon_class %>"></i>
+    <% end %>
   <% end %>
 <% end %>
 
 
-<% if current_user.favorite?(spot) %>
-  <%= form_with(model: current_user.favorites.find_by(tourist_spot_id: spot.id), method: :delete, remote: true, html: { class: 'favorite-button' }) do |f| %>
-    <%= hidden_field_tag :favorite_spot_id, spot.id %>
-    <%= f.submit class: 'favorite-button' do %>
-      <i class="fa fa-heart"></i>
-    <% end %>
-  <% end %>
-<% else %>
-  <%= form_with(model: current_user.favorites.build, remote: true, html: { class: 'favorite-button' }) do |f| %>
-    <%= hidden_field_tag :favorite_spot_id, spot.id %>
-    <%= f.submit class: 'favorite-button' do %>
-      <i class="fa fa-heart-o"></i>
-    <% end %>
-  <% end %>
-<% end %>
 
 
