--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -24,7 +24,7 @@
             </li>
             <li class="nav-item">
               <%= link_to new_tourist_spot_path, class: 'nav-link' do %>
-                <i class="fas fa-solid fa-comment"></i> Post
+                <i class="fa-solid fa-plus"></i> Post
               <% end %>
             </li>
           </ul>
