--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -8,13 +8,13 @@
   </div>
   
   <div class="custom-ex">
-    <h2 class="mt-1 mb-1">How to Use</h2>
+    <h2 class="mt-1 mb-1 special-font">【How to Use】</h2>
     <p class = "mt-5">Do you know the truly amazing tourist spots?</p>
     <p class = "mb-5">Japan has many excellent tourist spots that are not generally known. <br>Discover real tourist spots without the filters of SNS.</p>
   </div>
 
   <div class="feature mt-5">
-    <h3>Search</h3>
+    <h3 class="special-font">Search</h3>
     <div class="feature-content">
       <%= image_tag 'search.jpg', alt: 'search_image', class: 'feature-image' %>
       <p class="top-explain">Use the search function to find your favorite spots.</p>
@@ -22,7 +22,7 @@
   </div>
 
   <div class="feature">
-    <h3>Review</h3>
+    <h3 class="special-font">Review</h3>
     <div class="feature-content">
       <%= image_tag 'review.png', alt: 'review_image', class: 'feature-image' %>
       <p class="top-explain">When you actually visit a spot, post your reviews.</p>
@@ -30,7 +30,7 @@
   </div>
 
   <div class="feature">
-    <h3>Post</h3>
+    <h3 class="special-font">Post</h3>
     <div class="feature-content">
       <%= image_tag 'post.png', alt: 'post_image', class: 'feature-image' %>
       <p class="top-explain">If you find a spot that is just for you, be sure to post it.</p>
